# athena-lambda

./: pyproject.toml
.bin/: get-app-version.sh  invoke-lambda.sh  setup_ecr_repository.sh  setup_localstack.sh
.github/workflows/: ci.yml  ci2.yml  package-logger.yml  package-resize.yml  package.yml  wc-package.yml  wc-test.yml
athena_lambda/serverless/logger/: Dockerfile  lambda_function.py
athena_lambda/serverless/resize/: Dockerfile  lambda_function.py
tests/: helpers.py
tests/serverless/logger/: event.json  test_logger.py
tests/serverless/resize/: event.json  test_resize.py
